--- a/package.json
+++ b/package.json
@@ -6,17 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config=graphql.config.js",
+    "codegen:watch": "graphql-codegen --watch --config=graphql.config.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "graphql": "^16.8.1",
+    "graphql-hooks": "^6.3.0",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "usehooks-ts": "^2.9.1"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@parcel/watcher": "^2.3.0",
+    "dotenv": "^16.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "5.2.2"
   }
 }
